<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.appssquare.mahmoud.myshoppinglist.LoginActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp">
<requestFocus></requestFocus>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fblogin_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            facebook:com_facebook_login_text="Log in with Facebook " />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fblogin_button"
            tools:layout_editor_absoluteY="268dp">

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_weight="2"
                android:background="#969696" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/or" />

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_weight="2"
                android:background="#969696" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmaillogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_round_corner"
            android:drawableStart="@drawable/emailicon"
            android:ems="10"
            android:hint="@string/e_mail"

            android:inputType="textEmailAddress"
            android:padding="2dp"
            android:textColor="#949393"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <EditText
            android:id="@+id/editTextPasswordlogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_round_corner"
            android:drawableStart="@drawable/lockicon"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="2dp"
            android:textColor="#949393"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmaillogin" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_bg_round_corner"

            android:text="@string/log_in"
            android:textColor="#44029b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordlogin" />

        <Button
            android:id="@+id/forgetPasswordbtn"
            android:layout_width="172dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:padding="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/forgot_password"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/txViewRegisterNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/dont_have_account"
            app:layout_constraintEnd_toStartOf="@+id/signupbtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPasswordbtn" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="86dp"
            android:layout_height="29dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:padding="2dp"
            android:text="@string/sign_up"
            android:textColor="#3f69ff"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/txViewRegisterNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txViewRegisterNew" />

        <Button
            android:id="@+id/skipbtn"
            android:layout_width="82dp"
            android:layout_height="23dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"

            android:background="@android:color/transparent"
            android:text="@string/skip"
            android:textColor="#3f69ff"
            app:layout_constraintBottom_toTopOf="@+id/txtViewRights"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupbtn" />

        <TextView
            android:id="@+id/txtViewRights"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/all_rights"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarlogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ProgressBar>
    </android.support.constraint.ConstraintLayout>
</ScrollView>