<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.appssquare.mahmoud.myshoppinglist.AddShopActivity"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="25dp">

        <requestFocus></requestFocus>

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="0dp"
            android:background="@color/toolbarbg"
            android:gravity="center_horizontal"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editShopName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/bg_round_corner"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/leftcart"
            android:ems="10"
            android:hint="@string/enter_shop_name_hint"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/editShopLocation"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_round_corner"
            android:drawableStart="@drawable/marker"
            android:ems="10"
            android:hint="@string/enter_shop_location_hint"
            android:inputType="textPersonName"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editShopName" />

        <Button
            android:id="@+id/getloconmap"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/marker"
            android:text="@string/get_location_on_map_hint"
            android:textColor="#1000e9"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editShopLocation" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_green_round_corner"
            android:text="@string/add_button"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getloconmap" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn_red_round_corner"
            android:text="@string/cancel_button"
            android:textColor="@android:color/white"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnAdd" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>